2002-03-28  Richard Hestilow  <hestilow@ximian.com>

	* applier.c (MONITOR_CONTENTS_WIDTH, MONITOR_CONTENTS_HEIGHT):
	Rename to _DEFAULT_WIDTH, _DEFAULT_HEIGHT.
	(draw_disabled_message): Accept width and height as variables.
	(bg_applier_class_init): Install props preview_width, preview_height.
	(bg_applier_set_prop): Accept new size properties, only set to
	default width/height on mode PREVIEW if uninitialized.
	(bg_applier_new_at_size): Added.
	(bg_applier_apply_prefs): Call draw_disabled_message with actual
	width/height.
	(bg_applier_get_preview_width): Create pixmap based on set size.
	
2002-03-26  Dave Camp  <dave@ximian.com>

	* applier.c: (bg_applier_init): Don't initialize
	is_nautilus_running here (check it each time in appy_prefs).
	(bg_applier_apply_prefs): Don't try to apply the background if
	nautilus is running.

2002-03-19  Richard Hestilow  <hestilow@ximian.com>

	* preferences.h (wallpaper_type_t): Remove EMBOSSED since we
	don't support it.
	
	* preferences.c:
	(_bg_wptype_values, _bg_orientation_values): Move name values
	to nick, change name to "correct" form.
	(read_wptype_from_string, bg_preferences_get_wptype_as_string):
	Remove EMBOSSSED option.
	
	* preview-file-selection.[ch]: Add function
	preview_file_selection_intelligent_scale.

	* applier.c: Change MONITOR_CONTENTS_WIDTH/HEIGHT to 64/48
	(correct monitor ratio).
	(bg_applier_apply_prefs): Disable wallpaper if WPTYPE_NONE.
	(bg_applier_get_preview_widget): Create to WIDTH/HEIGHT.
	(get_geometry): Remove reference to EMBOSSED.

2002-03-17  Darin Adler  <darin@bentspoon.com>

	* preferences.c: (bg_preferences_merge_entry):
	Use G_GNUC_FUNCTION so we're not gcc-specific.

2002-03-15  Seth Nickell  <snickell@stanford.edu>

	* preferences.c: (bg_preferences_load),
	(bg_preferences_merge_entry), (read_wptype_from_string),
	(read_color_from_string), (bg_preferences_get_wptype_as_string):
	* preferences.h:

	Add an enum type for specifying that we don't know the type (i.e. the